[gd_scene load_steps=7 format=2]

[ext_resource path="res://Cinematics.gd" type="Script" id=1]
[ext_resource path="res://ItemGet.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/item_get_subheader.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/item_get_prompt.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/item_get_header.tres" type="DynamicFont" id=5]

[sub_resource type="Animation" id=1]
resource_name = "PressXToContinue"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PressZToContinue:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.447059, 0.447059, 0.447059, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Cinematics" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ScreenFade" type="ColorRect" parent="."]
visible = false
margin_right = 1040.0
margin_bottom = 600.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OverlayText" type="Label" parent="."]
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "The flavor was disappointing."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemGet" parent="." instance=ExtResource( 2 )]
visible = false

[node name="PressZToContinue" type="Label" parent="."]
visible = false
margin_left = 280.0
margin_top = 400.0
margin_right = 800.0
margin_bottom = 414.0
custom_colors/font_color = Color( 0.380392, 0.576471, 0.917647, 1 )
text = "Press Z to continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/PressXToContinue = SubResource( 1 )

[node name="PressZPrompt" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_top = 529.0
margin_bottom = 557.0
custom_fonts/font = ExtResource( 4 )
text = "Press Z to continue"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressXPrompt" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_top = 529.0
margin_bottom = 557.0
custom_fonts/font = ExtResource( 5 )
text = "Press X to GET ANGRY"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="End" type="Label" parent="."]
anchor_right = 1.0
margin_left = -10.9315
margin_top = 492.001
margin_right = -44.9315
margin_bottom = 565.001
custom_fonts/font = ExtResource( 5 )
text = "End"
align = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
